# labio

./: LICENSE  README.md  pyproject.toml
labio/: utils.py
labio/read/: __init__.py  cosmed.py
labio/write/: opensim.py
src/: __init__.py
src/btspy/: __init__.py  read.py
src/labio/read/: __init__.py  biostrength.py  btsbioengineering.py
src/read/: __init__.py  ircam.py  opensim.py
src/read/biostrength/: __init__.py  assets.py  core.py  gui.py  products.py
test/: test_all.py
test/assets/read/: biostrength_leg_press_read.txt
test/assets/write/: write.mot  write.trc
tests/: test.py  test_all.py
