[build-system]
requires = [
    "setuptools",
    "wheel",
    "pandas",
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "btspy"
authors = [{ name="Luca Zoffoli", email="lzoffoli@technogym.com" }]
description = "A small package to read BTSBioengineering tdf and emt files."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "0.1"
dynamic = ["readme", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md"}

[project.urls]
"Homepage" = "https://github.com/ZofTG/btspy"
"Bug Tracker" = "https://github.com/ZofTG/btspy/issues"
