[build-system]
requires = [
    "pandas",
    "numpy",
    "tk",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "labio"
authors = [{ name="Luca Zoffoli", email="lzoffoli@technogym.com" }]
description = "A small package to *READ* and *WRITE* data obtained from different sources."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
version = "6"
dynamic = ["readme", "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = "README.md"}

[project.urls]
"Homepage" = "https://github.com/ZofTG/labio"
"Bug Tracker" = "https://github.com/ZofTG/labio/issues"
